# MFG_RL

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
config/: default.yaml
examples/basic/: linear_quadratic_example.py
src/mfg_rl/: __init__.py  mean_field.py  policy.py  scoring.py
src/mfg_rl/agents/: __init__.py
src/mfg_rl/algorithms/: __init__.py
src/mfg_rl/config/: __init__.py  config_factory.py  mfg_rl_config.py
src/mfg_rl/core/: __init__.py  mfg_rl_problem.py
src/mfg_rl/environments/: __init__.py  base.py
src/mfg_rl/factory/: __init__.py  solver_factory.py
src/mfg_rl/networks/: __init__.py
src/mfg_rl/utils/: __init__.py
